Usuário já consegue cadastrar e consultar alocações

--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,1 @@
-MONGOLAB_URI="mongodb+srv://Alcristi:Dragonballeldorado@cluster0.gbvfigp.mongodb.net/?retryWrites=true&w=majority"
+MONGO="mongodb+srv://Alcristi:Dragonballeldorado@cluster0.gbvfigp.mongodb.net/?retryWrites=true&w=majority"
