--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "main": "index.js",
   "author": "Allan Cristian <alcristi.sto@gmail.com>",
   "scripts": {
-    "start": "ts-node ./src/index.ts"
+    "start": "ts-node ./src/index.ts",
+    "dev": "nodemon  --trace-warnings --watch 'src/' --exec 'ts-node src/index.ts' -e ts"
   },
   "license": "MIT",
   "dependencies": {
     "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^18.6.1",
     "body-parser": "^1.20.0",
     "dotenv": "^16.0.1",
@@ -16,6 +18,7 @@
     "express": "^4.18.1",
     "jest": "^28.1.3",
     "mongoose": "^6.4.7",
+    "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
