--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Allan Cristian <alcristi.sto@gmail.com>",
   "scripts": {
     "start": "ts-node ./src/index.ts",
-    "dev": "nodemon  --trace-warnings --watch 'src/' --exec 'ts-node src/index.ts' -e ts"
+    "dev": "nodemon  --trace-warnings --watch 'src/' --exec 'clear && ts-node src/index.ts' -e ts"
   },
   "license": "MIT",
   "dependencies": {
