--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.6.1",
     "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
+    "cours": "^1.0.0",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
@@ -21,5 +23,8 @@
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12"
   }
 }
