--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
     "mongoose": "^6.4.7",
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+	"@types/cors": "^2.8.12"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.12"
+
   }
 }
