--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^18.6.1",
@@ -22,10 +23,7 @@
     "mongoose": "^6.4.7",
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
-    "typescript": "^4.7.4",
-	"@types/cors": "^2.8.12"
+    "typescript": "^4.7.4"
   },
-  "devDependencies": {
-
-  }
+  "devDependencies": {}
 }
